// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-like-comments.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
alert(
<!-- comment
'hello world'
)
=====================================output=====================================
alert(
  <!-- comment
  "hello world"
);

================================================================================
`;

exports[`html-like-comments-with-dynamic-import.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let x=10;while(x-->0)console.log(x)
await(import('mod'))
=====================================output=====================================
let x = 10;
while (x-- > 0) console.log(x);
await import("mod");

================================================================================
`;
